package ru.yandex.practicum.smarthome.dto;

import lombok.Data;

@Data
public class ActionDto {
    private Long id;
    private String action;
}
